--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <title>Document</title>
 </head>
 <body>
-<script src="socket.io.js"></script>
+<!-- <script src="socket.io.js"></script> -->
+    Yo!
 <script>
-  var socket = io.connect('http://localhost:8080');
-  socket.on('news', function (data) {
-    console.log(data);
-    socket.emit('my other event', { my: 'data' });
-  });
+  // var socket = io.connect('http://localhost:8080');
+  // socket.on('news', function (data) {
+  //   console.log(data);
+  //   socket.emit('my other event', { my: 'data' });
+  // });
 </script>
 </body>
 </html>
